--- a/cuda11/tensorflow/Dockerfile
+++ b/cuda11/tensorflow/Dockerfile
@@ -2,7 +2,7 @@ FROM nvcr.io/nvidia/tensorflow:20.09-tf2-py3
 
                                                                                                                                                                                 
 # Install OpenSSH for MPI to communicate between containers                                                                                           
-RUN apt-get install -y --no-install-recommends openssh-client openssh-server && \                                                                     
+RUN  apt-get -o Acquire::Check-Valid-Until=false  -o Acquire::Check-Date=false   update && apt-get install -y --no-install-recommends openssh-client openssh-server && \                                                                     
     mkdir -p /var/run/sshd                                                                                                                            
 #                                                                                                                                                      
 # Allow OpenSSH to talk to containers without asking for confirmation                                                                                 
